[project]
name = "booking-client"
version = "0.1.0"
requires-python = ">=3.11" # TODO: Check with vermin

dependencies = ["aiohttp", "requests"]

[project.optional-dependencies]
dev = ["black", "isort", "pylint[spelling]", "mypy", "types-requests"]

[project.scripts]
booking = "booking_client.__main__:entrypoint"
