[project]
name = "booking-client"
version = "0.1.0"
requires-python = ">=3.12" # TODO: Check with vermin

dependencies = ["aiohttp>=3.9.0b0", "requests"]

[project.optional-dependencies]
dev = ["black", "isort", "pylint[spelling]", "mypy", "types-requests"]

[project.scripts]
booking = "booking_client.__main__:entrypoint"
