[project]
name = "booking-server"
version = "0.1.0"
requires-python = ">=3.8"

dependencies = [
    "aioconsole >= 0.6.1",
    "aiohttp >= 3.8.4, <4",
    "booking-common @ git+https://github.com/JoakimJoensuu/resource-booking-gh-runner/#subdirectory=booking-common",
]

[project.optional-dependencies]
dev = ["black", "isort", "pylint", "mypy"]
