[project]
name = "booking-server"
version = "0.1.0"
requires-python = ">=3.8"

# TODO: Lock versions
dependencies = [
    "uvloop",
    "hypercorn",
    "aioconsole",
    "fastapi",
    "booking-common @ git+https://github.com/JoakimJoensuu/resource-booking-gh-runner/#subdirectory=booking-common",
]

[project.optional-dependencies]
dev = ["black", "isort", "pylint", "mypy"]
